[tool.poetry]
name = "lbazarnov-brain-games"
version = "0.1.0"
description = "Brain Games — first learning project by hexlet.io programming school, which includes five arithmetic games"
authors = ["lbazarnov"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/lbazarnov/python-project-lvl1"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Intended Audience :: Education',
    'Topic :: Games/Entertainment',
    'Operating System :: OS Independent',
]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
